adding new image for the holidays

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ specific focus during 2020 and 2021."
         <!-- End of informational alerts-->
         <div class="row">
           <div class="card text-white container" style="background-color: #49b7e6">
-            <img src="/images/front-page.png" class="card-img rounded" alt="AEHCA Inc. logo">
+            <img src="/images/front-page-holiday-2022.jpg" class="card-img rounded" alt="AEHCA Inc. logo">
             <div class="card-img-overlay row align-items-end justify-content-around">
               <!-- Button group for triggering modal -->
               <!-- Buttons are on top of the image by defualt if screensize is greater than medium -->
