fix link to give page on home page

--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@ specific focus during 2020 and 2021."
       <hr class="my-4">
       <div class="container">
         <div class="col text-center">
-          <button type="button" class="btn btn-lg btn-info video-btn rounded-pill" href="/give">
-            Give
-          </button>
+          <a class="btn btn-info rounded-pill" href="/give" role="button">Give</a>
         </div>
         <p><br>
           By giving, you are contributing to the education and creating healthy living conditions in Central America
