--- a/index.html
+++ b/index.html
@@ -53,45 +53,20 @@ specific focus during 2020 and 2021."
         <!-- End of informational alerts-->
         <div class="row">
           <div class="card text-white container" style="background-color: #49b7e6">
+            <!-- Displays the wider image for devices with large or bigger screens -->
             <img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
               alt="AEHCA Inc. logo">
+            <!-- Displays the taller image for devices with smaller than large screens -->
             <img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">
-            <div class="card-img-overlay row align-items-end justify-content-around">
-              <!-- Button group for triggering modal -->
-              <!-- Buttons are on top of the image by defualt if screensize is greater than medium -->
-              <div class="btn-group flex-wrap d-none d-md-block">
-                <button type="button" id="fp_button" class="btn btn-lg btn-primary video-btn rounded-pill"
-                  data-bs-toggle="modal" data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
-                  Scholarships
-                </button>
-                <button type="button" id="fp_button" class="btn btn-lg btn-warning video-btn rounded-pill"
-                  data-bs-toggle="modal" data-tagVideo="/videos/IDEC_building_project.mp4" data-bs-target="#videoModal">
-                  School Building
-                </button>
-                <button type="button" id="fp_button" class="btn btn-lg btn-danger video-btn rounded-pill"
-                  data-bs-toggle="modal" data-tagVideo="/videos/covid-19_food_relief.mp4" data-bs-target="#videoModal">
-                  Emergency Food Relief
-                </button>
-              </div>
-            </div>
           </div>
-          <div class="card d-none d-md-block">
-            <div class="card-body rounded pt-3" style="background-color: #49b7e6">
-              AEHCA works to advance education and healthy living conditions throughout Central America.
-              Forming partnerships with communities to build on their specific needs and existing resources.
-              Our partners in Ipala, Guatemala have been working with us to identify projects that will
-              provide the most benefits for their community.
-            </div>
-          </div>
-          <!-- Moves the buttons below the image if the screensize is medium or smaller -->
-          <div class="card container d-md-none mt-1" style="background-color: #49b7e6">
-            <div class="card-body rounded align-items-end justify-content-around">
+          <div class="card container mt-2" style="background-color: #49b7e6">
+            <div class="card-body rounded d-flex justify-content-center">
               <div class="btn-group row flex-wrap text-center">
                 <button type="button" id="fp_button" class="btn btn-primary video-btn rounded-pill"
                   data-bs-toggle="modal" data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
                   Scholarships
                 </button>
-                <button type="button" id="fp_button" class="btn btn-warning video-btn rounded-pill"
+                <button type="button" id="fp_button" class="btn btn-warning video-btn rounded-pill mx-2"
                   data-bs-toggle="modal" data-tagVideo="/videos/IDEC_building_project.mp4" data-bs-target="#videoModal">
                   School Building
                 </button>
@@ -99,12 +74,6 @@ specific focus during 2020 and 2021."
                   data-bs-toggle="modal" data-tagVideo="/videos/covid-19_food_relief.mp4" data-bs-target="#videoModal">
                   Emergency Food Relief
                 </button>
-                <p class="pt-3 text-left">AEHCA works to advance education and healthy living conditions throughout
-                  Central
-                  America.
-                  Forming partnerships with communities to build on their specific needs and existing resources.
-                  Our partners in Ipala, Guatemala have been working with us to identify projects that will
-                  provide the most benefits for their community.</p>
               </div>
             </div>
           </div>
@@ -113,12 +82,12 @@ specific focus during 2020 and 2021."
       <hr class="my-4">
       <div class="container">
         <div class="col text-center">
-          <a class="btn btn-info rounded-pill" href="/give" role="button">Give</a>
+          <a class="btn-lg btn-info rounded-pill" href="/give" role="button">Give</a>
+          <p><br>
+            By giving, you are contributing to the education and creating healthy living conditions in Central America
+            communities.
+          </p>
         </div>
-        <p><br>
-          By giving, you are contributing to the education and creating healthy living conditions in Central America
-          communities.
-        </p>
       </div>
       <hr class="my-4">
       <div class="card-group">
