--- a/_drafts/draft-post.html
+++ b/_drafts/draft-post.html
@@ -139,7 +139,8 @@ title: Testing Drafts
                             <p>&nbsp;&nbsp;&nbsp;Thanks,<br>
                                 &nbsp;&nbsp;&nbsp;Billy Earles<br>
                                 <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;AEHCA<br></small>
-                                <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;CEO<br></small></p>
+                                <small class="text-muted">&nbsp;&nbsp;&nbsp;&nbsp;CEO<br></small>
+                            </p>
                         </div>
                     </div>
                 </div>
