added venmo link

--- a/give.html
+++ b/give.html
@@ -86,6 +86,16 @@ For easy service and to set up recurring payments, use our PayPal link."
                   <img alt="paypal donation button" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif"
                     width="1" height="1" />
                 </form>
+                <!-- Venmo donation button/link-->
+                <a class="btn btn-primary" style="background-color: #008DFF;"
+                  href="https://venmo.com/code?user_id=3680842622698567741" role="button"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                    style="fill: rgb(255, 255, 255)">
+                    <path
+                      d="M14 3.27a7.49 7.49 0 0 1 .66 3.35c0 2.72-1.93 6.72-3.49 9.27L9.53 2.44l-6.91.65L5.79 22h7.88c3.45-4.54 7.71-11 7.71-16a7.3 7.3 0 0 0-1.06-4z">
+                    </path>
+                  </svg>
+                  &nbsp;Venmo</a>
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#donateModal">
                   Donate via credit card
                 </button>
