add phone sized video for home page, added videos to home

--- a/index.html
+++ b/index.html
@@ -54,10 +54,17 @@ specific focus during 2020 and 2021."
         <div class="row">
           <div class="card text-white container" style="background-color: #49b7e6">
             <!-- Displays the wider image for devices with large or bigger screens -->
-            <img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
-              alt="AEHCA Inc. logo">
+            <video class="col d-none d-lg-block" muted autoplay playsinline loop>
+              <source src="/videos/front_page_valentines_day.mp4" type="video/mp4">
+            </video>
+            <video class="col rounded d-lg-none" controls muted autoplay playsinline loop>
+              <source src="/videos/front_page_valentines_day_horiz.mp4" type="video/mp4">
+            </video>
+            <!-- Displays the wider image for devices with large or bigger screens -->
+            <!--<img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
+              alt="AEHCA Inc. logo">-->
             <!-- Displays the taller image for devices with smaller than large screens -->
-            <img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">
+            <!--<img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">-->
           </div>
           <div class="card container mt-2" style="background-color: #49b7e6">
             <div class="card-body rounded d-flex justify-content-center">
