--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@ specific focus during 2020 and 2021."
         <!-- End of informational alerts-->
         <div class="row">
           <div class="card text-white container" style="background-color: #49b7e6">
-            <!-- Displays the wider image for devices with large or bigger screens -->
+            <!-- Displays the wider video for devices with large or bigger screens -->
             <video class="col d-none d-lg-block" muted autoplay playsinline loop>
               <source src="/videos/front_page_valentines_day.mp4" type="video/mp4">
             </video>
-            <video class="col rounded d-lg-none" controls muted autoplay playsinline loop>
+            <!-- Displays the taller video for devices with smaller than large screens -->
+            <video class="col rounded d-lg-none" muted autoplay playsinline loop>
               <source src="/videos/front_page_valentines_day_horiz.mp4" type="video/mp4">
             </video>
             <!-- Displays the wider image for devices with large or bigger screens -->
