--- a/partnerships/guatemala/ipala.html
+++ b/partnerships/guatemala/ipala.html
@@ -47,12 +47,19 @@ layout: default
                   <li data-target="#ipalaCarousel" data-slide-to="0" class="active"></li>
                   <li data-target="#ipalaCarousel" data-slide-to="1"></li>
                   <li data-target="#ipalaCarousel" data-slide-to="2"></li>
+                  <li data-target="#ipalaCarousel" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="/images/ipala-map.png" class="d-block w-100 rounded" alt="ipala on map">
                     <div class="carousel-caption d-none d-md-block">
                       <p class="text-light bg-dark">Location of Ipala</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/images/ipala-muni-map.jpg" class="d-block w-100 rounded" alt="volcano lake">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p class="text-light bg-dark">Map of the municipality of Ipala.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
