comment out the modal and button for credit card option

--- a/give.html
+++ b/give.html
@@ -35,7 +35,7 @@ For easy service and to set up recurring payments, use our PayPal link."
               <div class="col text-center">
                 <img class="rounded" src="/images/zelle_badge-dark-small.jpg">
                 <!-- Modal -->
-                <div class="modal fade" id="donateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<!--                 <div class="modal fade" id="donateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                   aria-hidden="true">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -52,7 +52,6 @@ For easy service and to set up recurring payments, use our PayPal link."
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Keep me here</button>
-                        <!-- COMMENT THIS OUT WHILE THIS IS NOT THE OFFICIAL SITE -->
                         <form action="https://checkout.globalgatewaye4.firstdata.com/payment"
                           id="pay_now_form_12edcdebac" method="post">
                           <input type="hidden" name="x_login" value="WSP-AEHCA-OsnC5wC@vw" />
@@ -72,7 +71,7 @@ For easy service and to set up recurring payments, use our PayPal link."
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="row">
@@ -96,9 +95,11 @@ For easy service and to set up recurring payments, use our PayPal link."
                     </path>
                   </svg>
                   &nbsp;Donate via Venmo</a>
+                <!--
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#donateModal">
                   Donate via credit card
                 </button>
+                -->
               </div>
             </div>
             <hr class="my-4">
