--- a/give.html
+++ b/give.html
@@ -33,9 +33,9 @@ For easy service and to set up recurring payments, use our PayPal link."
           <div class="container">
             <div class="row">
               <div class="col text-center">
-                <img class="rounded" src="/images/zelle_badge-dark-small.jpg">
+                <!--<img class="rounded" src="/images/zelle_badge-dark-small.jpg"> -->
                 <!-- Modal -->
-<!--                 <div class="modal fade" id="donateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                <!--                 <div class="modal fade" id="donateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                   aria-hidden="true">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
