add slideshow of new topics

--- a/index.html
+++ b/index.html
@@ -51,22 +51,144 @@ specific focus during 2020 and 2021."
           {% endif %}
         -->
         <!-- End of informational alerts-->
+        <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+        <div class="col">
+          <div id="frontPageCarousel" class="carousel slide">
+            <ol class="carousel-indicators">
+              <li data-target="#frontPageCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="1"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="2"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="3"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="4"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="5"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="6"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="7"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="15000">
+                <video class="col rounded" muted autoplay playsinline loop alt="AEHCA Inc 2023 highlights">
+                  <source src="/videos/front_page_video_october.mp4" type="video/mp4">
+                </video>
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">AEHCA and its partners believe we each have a little of that light in us
+                    to share out into the world. 2023 has been an exciting year of sharing in Guatemala and we want you
+                    to know what's been happening! Click through this slideshow or on a button below to learn more.</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Letting our light shine in Ipala Guatemala as we started moving out into
+                    more of Central America in 2023</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                <img src="/images/solar_project.jpeg" class="d-block w-100 rounded" alt="solar project">
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">AEHCA and our partners are using solar-powered electricity to turn on
+                    the light in rural Ipala, Guatemala.</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Solar-powered electricity is turning on the lights in rural Ipala</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                <img src="/images/wheelchair_project.jpeg" class="d-block w-100 rounded" alt="wheel chair project">
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">Wheelchair loan program: AEHCA’s helping to secure a more healthy lives
+                    for needy disabled people AND their families too!</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Wheelchairs for the disabled AND their families too!</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                <img src="/images/classroom_space_project.jpeg" class="d-block w-100 rounded"
+                  alt="Building classroom space project">
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">Construction started for a new high school classroom. Neither COVID-19,
+                    nor inflation could ultimately stop us and our partner school IDEC from moving forward! Anticipated
+                    completion January 2024.</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Construction starting at IDEC for the first of 2 new classrooms.</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                <img src="/images/food_distribution_project.jpg" class="d-block w-100 rounded"
+                  alt="Food assistance Project">
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">Food assistance needs changed significantly over the last year as COVID
+                    restrictions lifted and we’ve adjusted too. It’s clear now we need to concentrate on seniors while
+                    keeping our eyes and hearts open to other needs too – like among disabled persons.</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Food relief moves beyond Covid-19 model.</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                <img src="/images/guatemala_growth.png" class="d-block w-100 rounded"
+                  alt="Growing outwards in Guatemala">
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">2023 is the year we moved out into a second Guatemalan community. It's a
+                    huge move on its own, but also a big step towards starting work in other parts of Central America
+                    too. Our new partner committee is in Olopa, Guatemala near the Hondoran border. We are working
+                    together to start a scholarship program in January and then other projects later in 2024.</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Expanding into a new location: Welcome Olopa, Guatemala!</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                <img src="/images/flood_project.jpeg" class="d-block w-100 rounded"
+                  alt="Securing flood prone community - Nueva Reforma">
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                <img src="/images/scholarship_project.jpeg" class="d-block w-100 rounded"
+                  alt="Full realization of scholarship program">
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">January 2024 will see full implementation of our scholarship program.
+                  </p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Full implementation of scholarship/financial aid program is almost here!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#frontPageCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#frontPageCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+        </div>
         <div class="row">
-          <div class="card text-white container" style="background-color: #49b7e6">
-            <!-- Displays the wider video for devices with large or bigger screens -->
+
+          <!-- <div class="card text-white container" style="background-color: #49b7e6">
+          Displays the wider video for devices with large or bigger screens
+
             <video class="col d-none d-lg-block" muted autoplay playsinline loop>
               <source src="/videos/front_page_video_october.mp4" type="video/mp4">
             </video>
-            <!-- Displays the taller video for devices with smaller than large screens -->
+          Displays the taller video for devices with smaller than large screens
             <video class="col rounded d-lg-none" muted autoplay playsinline loop>
               <source src="/videos/front_page_video_october.mp4" type="video/mp4">
             </video>
-            <!-- Displays the wider image for devices with large or bigger screens -->
-            <!--<img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
-              alt="AEHCA Inc. logo">-->
-            <!-- Displays the taller image for devices with smaller than large screens -->
-            <!--<img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">-->
-          </div>
+            
+          Displays the wider image for devices with large or bigger screens
+          <img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
+              alt="AEHCA Inc. logo">
+          Displays the taller image for devices with smaller than large screens
+          <img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">
+          </div> -->
           <div class="card container mt-2" style="background-color: #49b7e6">
             <div class="card-body rounded d-flex justify-content-center">
               <div class="btn-group row flex-wrap text-center">
