--- a/index.html
+++ b/index.html
@@ -83,83 +83,128 @@ specific focus during 2020 and 2021."
                 </div>
               </div>
               <div class="carousel-item" data-interval="9000">
-                <img src="/images/solar_project.jpeg" class="d-block w-100 rounded" alt="solar project">
-                <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">AEHCA and our partners are using solar-powered electricity to turn on
-                    the light in rural Ipala, Guatemala.</p>
-                </div>
-                <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Solar-powered electricity is turning on the lights in rural Ipala</p>
-                </div>
+                {% for post in site.posts %}
+                {% if post.title == "Solar-powered electricity is turning on the lights in rural Ipala" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/solar_project.jpeg" class="d-block w-100 rounded" alt="solar project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">AEHCA and our partners are using solar-powered electricity to turn on
+                      the light in rural Ipala, Guatemala.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Solar-powered electricity is turning on the lights in rural Ipala</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
               </div>
               <div class="carousel-item" data-interval="9000">
-                <img src="/images/wheelchair_project.jpeg" class="d-block w-100 rounded" alt="wheelchair project">
-                <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">Wheelchair loan program: AEHCA’s helping to secure a more healthy lives
-                    for needy disabled people AND their families too!</p>
-                </div>
-                <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Wheelchairs for the disabled AND their families too!</p>
-                </div>
+                {% for post in site.posts %}
+                {% if post.title == "Wheelchairs for the disabled AND their families too!" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/wheelchair_project.jpeg" class="d-block w-100 rounded" alt="wheelchair project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Wheelchair loan program: AEHCA’s helping to secure a more healthy
+                      lives
+                      for needy disabled people AND their families too!</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Wheelchairs for the disabled AND their families too!</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
               </div>
               <div class="carousel-item" data-interval="9000">
-                <img src="/images/classroom_space_project.jpeg" class="d-block w-100 rounded"
-                  alt="Building classroom space project">
-                <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">Construction started for a new high school classroom. Neither COVID-19,
-                    nor inflation could ultimately stop us and our partner school IDEC from moving forward! Anticipated
-                    completion January 2024.</p>
-                </div>
-                <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Construction starting at IDEC for the first of 2 new classrooms.</p>
-                </div>
+                {% for post in site.posts %}
+                {% if post.title == "Building an additional classroom for Ipala’s diversificado (high school…kinda)" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/classroom_space_project.jpeg" class="d-block w-100 rounded"
+                    alt="Building classroom space project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Construction started for a new high school classroom. Neither
+                      COVID-19,
+                      nor inflation could ultimately stop us and our partner school IDEC from moving forward!
+                      Anticipated
+                      completion January 2024.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Construction starting at IDEC for the first of 2 new classrooms.</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
               </div>
               <div class="carousel-item" data-interval="9000">
-                <img src="/images/food_distribution_project.jpg" class="d-block w-100 rounded"
-                  alt="Food assistance Project">
-                <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">Food assistance needs changed significantly over the last year as COVID
-                    restrictions lifted and we’ve adjusted too. It’s clear now we need to concentrate on seniors while
-                    keeping our eyes and hearts open to other needs too – like among disabled persons.</p>
-                </div>
-                <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Food relief moves beyond Covid-19 model.</p>
-                </div>
+                {% for post in site.posts %}
+                {% if post.title == "Food relief moves beyond Covid-19 model" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/food_distribution_project.jpg" class="d-block w-100 rounded"
+                    alt="Food assistance Project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Food assistance needs changed significantly over the last year as
+                      COVID
+                      restrictions lifted and we’ve adjusted too. It’s clear now we need to concentrate on seniors while
+                      keeping our eyes and hearts open to other needs too – like among disabled persons.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Food relief moves beyond Covid-19 model.</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
               </div>
               <div class="carousel-item" data-interval="9000">
-                <img src="/images/guatemala_growth.png" class="d-block w-100 rounded"
-                  alt="Growing outwards in Guatemala">
-                <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">2023 is the year we moved out into a second Guatemalan community. It's a
-                    huge move on its own, but also a big step towards starting work in other parts of Central America
-                    too. Our new partner committee is in Olopa, Guatemala near the Hondoran border. We are working
-                    together to start a scholarship program in January and then other projects later in 2024.</p>
-                </div>
-                <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Expanding into a new location: Welcome Olopa, Guatemala!</p>
-                </div>
+                {% for post in site.posts %}
+                {% if post.title == "AEHCA Inc. expands into a new community - WELCOME Olopa, Guatemala" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/guatemala_growth.png" class="d-block w-100 rounded"
+                    alt="Growing outwards in Guatemala">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">2023 is the year we moved out into a second Guatemalan community. It's
+                      a
+                      huge move on its own, but also a big step towards starting work in other parts of Central America
+                      too. Our new partner committee is in Olopa, Guatemala near the Hondoran border. We are working
+                      together to start a scholarship program in January and then other projects later in 2024.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Expanding into a new location: Welcome Olopa, Guatemala!</p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
               </div>
               <div class="carousel-item" data-interval="9000">
-                <img src="/images/flood_project.jpeg" class="d-block w-100 rounded"
-                  alt="Securing flood prone community - Nueva Reforma">
-                <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
-                </div>
-                <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
-                </div>
+                {% for post in site.posts %}
+                {% if post.title == "Securing flood prone community - Nueva Reforma" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/flood_project.jpeg" class="d-block w-100 rounded"
+                    alt="Securing flood prone community - Nueva Reforma">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
               </div>
               <div class="carousel-item" data-interval="9000">
-                <img src="/images/scholarship_project.jpeg" class="d-block w-100 rounded"
-                  alt="Full realization of scholarship program">
-                <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">January 2024 will see full implementation of our scholarship program.
-                  </p>
-                </div>
-                <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Full implementation of scholarship/financial aid program is almost here!
-                  </p>
-                </div>
+                {% for post in site.posts %}
+                {% if post.title == "Full Rollout of Our Post-secondary School Scholarship Program" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/scholarship_project.jpeg" class="d-block w-100 rounded"
+                    alt="Full realization of scholarship program">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">January 2024 will see full implementation of our scholarship program.
+                    </p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Full implementation of scholarship/financial aid program is almost
+                      here!
+                    </p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
               </div>
             </div>
             <a class="carousel-control-prev" href="#frontPageCarousel" role="button" data-slide="prev">
@@ -226,8 +271,15 @@ specific focus during 2020 and 2021."
                 {% endif %}
                 {% if post.title == "AEHCA Inc. expands into a new community - WELCOME Olopa, Guatemala" %}
                 <a href="{{ post.url }}"><button type="button" id="fp_button"
-                    class="btn btn-warning video-btn rounded-pill my-2">
+                    class="btn btn-danger video-btn rounded-pill my-2">
                     Olapa, Guatemala
+                  </button>
+                </a>
+                {% endif %}
+                {% if post.title == "Securing flood prone community - Nueva Reforma" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-warning video-btn rounded-pill ml-2 my-2">
+                    Flooding support
                   </button>
                 </a>
                 {% endif %}
