move the archive of old posts

--- a/_posts/2020-03-20-letter-from-the-ceo.html
+++ b/_posts/2020-03-20-letter-from-the-ceo.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: Letter from the CEO
+title: Letter from the CEO [Archived]
 tags: health, covid, pandemic, guatemala, ipala
+category: archived
 keywords: ipala, guatemala, covid, health, pandemic
 author: billy
 ---
@@ -21,7 +22,7 @@ author: billy
             <p></p>
             <p class="lead text-center">Association for Education and Health in Central America</p>
             <hr class="my-4">
-            <h4 class="mt-0">Letter from the CEO</h4>
+            <h4 class="mt-0">{{ page.title }}</h4>
             <p></p>
             <div class="media">
                 <img src="/images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO of AECHA Inc.">
