--- a/_posts/2020-12-15-education-support.html
+++ b/_posts/2020-12-15-education-support.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: Education in Ipala, Guatemala
+title: Education in Ipala, Guatemala [Archived]
 tags: guatemala, ipala, education, university, schools, covid, relief
+category: archived
 keywords: guatemala, ipala, education, university, schools, covid, relief
 author: billy
 ---
@@ -27,7 +28,7 @@ author: billy
                     <div class="media-body">
                         <div class="row">
                             <div class="container">
-                                <h4 class="mt-0">Education in Ipala, Guatemala</h4>
+                                <h4 class="mt-0">{{ page.title }}</h4>
                                 <p>We want to support the entire educational community
                                     (students, parents, teachers, schools and local leaders)
                                     to become strong and self-sufficient. Your donation to AEHCA
