--- a/_posts/2019-08-09-2019-ipala-guatemala-trip-report.html
+++ b/_posts/2019-08-09-2019-ipala-guatemala-trip-report.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: 2019 Ipala Guatemala Trip Report
+title: 2019 Ipala Guatemala Trip Report [Archived]
 tags: guatemala, ipala, education, trip, schools
+category: archived
 keywords: guatemala, ipala, education, trip, schools
 author: billy
 ---
@@ -21,7 +22,7 @@ author: billy
             <p></p>
             <p class="lead text-center">Association for Education and Health in Central America</p>
             <hr class="my-4">
-            <h4 class="mt-0">2019 Ipala Guatemala Trip Report</h4>
+            <h4 class="mt-0">{{ page.title }}</h4>
             <p></p>
             <div class="media">
                 <img src="/images/billy-small.png" class="mr-3 rounded" alt="Billy Earles, CEO of AECHA Inc.">
