change wording from articles to events

--- a/current.html
+++ b/current.html
@@ -19,7 +19,7 @@ layout: default
       <p></p>
       <p class="lead text-center">Association for Education and Health in Central America</p>
       <hr class="my-4">
-      <h4 class="mt-0 font-weight-bolder">Current Articles</h4>
+      <h4 class="mt-0 font-weight-bolder">Current Events</h4>
       <div class="list-group">
         {% for post in site.posts %}
         {% if post.category != 'archived' %}
