--- a/_posts/2023-10-25-wheelchair-project.html
+++ b/_posts/2023-10-25-wheelchair-project.html
@@ -132,4 +132,7 @@ author: Vernon
                         {% endfor %}
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
