--- a/_posts/2023-10-26-solar-project.html
+++ b/_posts/2023-10-26-solar-project.html
@@ -92,10 +92,10 @@ author: Vernon
                     <div class="row">
                         <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
                         <div class="col">
-                            <div id="educationCarousel" class="carousel slide" data-ride="carousel">
+                            <div id="solarCarousel2" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
-                                    <li data-target="#educationCarousel" data-slide-to="0" class="active"></li>
-                                    <li data-target="#educationCarousel" data-slide-to="1"></li>
+                                    <li data-target="#solarCarousel2" data-slide-to="0" class="active"></li>
+                                    <li data-target="#solarCarousel2" data-slide-to="1"></li>
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -107,13 +107,11 @@ author: Vernon
                                             alt="Education - Suyata school - Ipala, Guatemala">
                                     </div>
                                 </div>
-                                <a class="carousel-control-prev" href="#educationCarousel" role="button"
-                                    data-slide="prev">
+                                <a class="carousel-control-prev" href="#solarCarousel2" role="button" data-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Previous</span>
                                 </a>
-                                <a class="carousel-control-next" href="#educationCarousel" role="button"
-                                    data-slide="next">
+                                <a class="carousel-control-next" href="#solarCarousel2" role="button" data-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
