fix div end tags

--- a/_posts/2021-03-05-health-in-guatemala.html
+++ b/_posts/2021-03-05-health-in-guatemala.html
@@ -140,4 +140,7 @@ author: billy
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
