--- a/_posts/2023-10-20-scholarship-project.html
+++ b/_posts/2023-10-20-scholarship-project.html
@@ -65,4 +65,7 @@ author: Vernon
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
