--- a/_posts/2023-10-21-flood-prone-support-project.html
+++ b/_posts/2023-10-21-flood-prone-support-project.html
@@ -87,4 +87,7 @@ author: Vernon
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
