--- a/_posts/2023-10-22-expanding-to-olapa-project.html
+++ b/_posts/2023-10-22-expanding-to-olapa-project.html
@@ -60,4 +60,7 @@ author: Vernon
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
