fix image display

--- a/_posts/2023-10-20-scholarship-project.html
+++ b/_posts/2023-10-20-scholarship-project.html
@@ -37,11 +37,20 @@ author: Vernon
                                     be unlikely to find the means to go to college or other post-secondary schools.
                                     That's what we’ve done and that is what we will continue to do!
                                 </p>
+                                <!--Displays the wider image for devices with large or bigger screens
+                                <img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
+                                    alt="AEHCA Inc. logo">
+                                Displays the taller image for devices with smaller than large screens
+                                <img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">
+                                </div> -->
                                 <img src="/images/scholarship_list.png" width="50%" height="auto"
-                                    class="mr-3 pb-2 rounded"
+                                    class="mr-3 pb-2 rounded d-none d-lg-block"
+                                    alt="list of students that have received scholarship support">
+                                <img src="/images/scholarship_list.png" width="100%" height="auto"
+                                    class="mr-3 pb-2 rounded d-lg-none"
                                     alt="list of students that have received scholarship support">
                                 <p>The accumulated names may look like just a list, but….</p>
-                                <img src="/images/scholarship_students.png" width="80%" height="auto"
+                                <img src="/images/scholarship_students.png" width="100%" height="auto"
                                     class="pb-2 rounded mx-auto d-block"
                                     alt="a picture of Vernon and the scholarship students">
                                 <p>They’re all real people with real dreams of being teachers, business women,
