fixing image size for smaller display

--- a/_posts/2023-10-21-flood-prone-support-project.html
+++ b/_posts/2023-10-21-flood-prone-support-project.html
@@ -70,7 +70,10 @@ author: Vernon
                                     better than before.
                                 </p>
                                 <img src="/images/new_walls_flood_project.jpeg" width="50%" height="auto"
-                                    class="mr-3 pb-2 rounded" alt="what the newly funded walls look like">
+                                    class="mr-3 pb-2 rounded d-none d-lg-block"
+                                    alt="what the newly funded walls look like">
+                                <img src="/images/new_walls_flood_project.jpeg" width="100%" height="auto"
+                                    class="mr-3 pb-2 rounded d-lg-none" alt="what the newly funded walls look like">
                             </div>
                         </div>
                         <hr class="my-4">
