--- a/partnerships.html
+++ b/partnerships.html
@@ -50,7 +50,7 @@ link for that country. As the seeds are planted and begin to grow, you will see 
                     <ul class="font-weight-normal">-<a class="text-info" href="/partnerships/guatemala/ipala.html">
                         Ipala</a>
                     </ul>
-                    <ul class="font-weight-normal">- Olapa
+                    <ul class="font-weight-normal">- Olopa
                     </ul>
                   </li>
                   <p></p>
